# skillscan-security

./: .pre-commit-hooks.yaml  CHANGELOG.md  CODEOWNERS  Dockerfile  Makefile  PATTERN_UPDATES.md  README.md  ROADMAP.md  index.txt  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml  corpus-sync.yml  domain-allowlist-monitor.yml  pattern-update-guard.yml  release-docker.yml  release-pypi.yml  signature-lint.yml  skillscan-reusable.yml  update-index.yml
corpus/: CORPUS_CARD.md  EVAL_RESULTS.md  README.md  SOURCES.md  manifest.json  scrape_log.jsonl
corpus/benign/: gh_0xartex_agentwallet__skill.md  gh_1dolinski_fastforms_skill.md  gh_6missedcalls_video_e_skill.md  gh_abczsl520_project_ar_project_arch_core.md  gh_acroca_mailescrow_mailescrow.md  gh_adhilroshan_orch_orch.md  gh_aditya_ps_05_lido_mc_skill.md  gh_adityamparikh_explai_explain_code.md  gh_aelaguiz_kitten_skil_kitten.md  gh_aelfproject_aelf_ski_aelf_skills_hub.md  gh_agents365_ai_excalid_excalidraw.md  gh_ahmiershadowman_comm_windows_toolchain_forensics.md  gh_akhenda_hendaz_next__hendaz_next_essentials.md  gh_alabenkhlifa_jobhunt_job_hunter.md  gh_albedo_tabai_lets_go_lets_go_rss.md  gh_alesheng_fal_agent_fal_generate.md  gh_alexanys_feishu_open_feishu_bridge.md  gh_alexey_max_fedorov_g_artemis_skill.md  gh_alexey_max_fedorov_g_demeter_skill.md  gh_alexi_build_raycast__raycast_extensions.md  gh_alonw0_molt_bar_skil_molt_bar.md  gh_andmarios_zendesk_sk_zendesk.md  gh_andreolf_metamask_ag_metamask_agent_wallet.md  gh_andres_herrejon_mast_master_planner.md  gh_angjustinl_dedao_dl__dedao_dl.md  gh_ankitdey01_humanized_humanized_game_review_skill.md  gh_ankushkun_pumpmyclaw_skill.md  gh_aokumablue_myrag_myrag.md  gh_apoloss_go_to_market_go_to_market_strategy.md  gh_app_incubator_xyz_sk_skill_vetter.md  gh_apstndb_dkcli_dkcli.md  gh_archubbuck_workspace_browser_automation.md  gh_arosstale_odu_odu.md  gh_artmsilva_lit_best_p_lit_best_practices.md  gh_asif2902_achswapv3_ai_frontend_design_skill.md  gh_aslakknutsen_ossm_ch_cherry_pick_backport.md  gh_auyelbekov_rawq_skill.md  gh_avatarneil_discord_v_discord_voice.md  gh_awesome_skills_manim_manim.md  gh_baibairui_macos_gui__macos_gui_skill.md  (+506 more)
corpus/malicious/: a01_curl_bash.md  a02_wget_sh.md  a04_disable_security.md  a05_secret_http.md  a06_ioc_known.md  a07_dns_exfil.md  a08_smtp_exfil.md  a09_scp_exfil.md  a10_cloud_upload.md  a12_defanged_url.md  a20_privilege_disable.md  a21_alt_download_exec.md  a22_benign.md  a25_trojan_source.md  a26_cursorjack_deeplink.md  a27_deno_byor.md  a28_glassworm_persistence.md  a29_bloktrooper_vsx.md  a30_clawhavoc_memory.md  a31_clickfix_webdav.md  a31_glassworm_chrome_rat.md  a32_electron_asar_c2.md  a32_openclaw_gatewayurl.md  a36_ghostclaw_skillmd_malware.md  a37_lotai_ai_assistant_c2.md  a38_glassworm_extensionpack.md  a39_npm_dependency_chain.md  a40_teampcp_credential_stealer.md  a41_canisterworm_icp_c2.md  a42_mcp_server_command_injection.md
corpus/prompt_injection/: a23_prompt_injection.md  p04_claudy_day_injection.md  pi01_role_override_description.md  pi02_role_override_notes.md  pi03_context_extraction_examples.md  pi04_fake_tool_output.md  pi05_indirect_external_data.md  pi06_persona_hijack_metadata.md  pi07_goal_hijack_tags.md  pi08_exfil_output_field.md  pi09_unicode_homoglyph.md  pi10_version_field_injection.md  pi11_social_eng_prerequisite.md  pi12_credential_exfil_env.md  pi13_reverse_shell_example.md  pi14_multi_turn_memory.md  pi15_typosquat_changelog.md  pi16_zero_width_smuggling.md  pi17_nested_skill_abuse.md  pi18_base64_encoded_payload.md  pi19_permission_escalation.md  pi20_error_message_leakage.md  pi21_supply_chain_dep.md  pi22_webhook_exfil_logging.md  pi23_author_field_injection.md  pi24_rss_indirect_injection.md  pi25_crypto_wallet_drainer.md  pi26_yaml_block_scalar.md  pi27_dependency_chain.md  pi28_update_backdoor.md  pi29_fake_xml_tags.md  pi30_amos_style_macos.md  (+38 more)
docs/: ARCHITECTURE.md  AUTOMATION_GUARDRAILS.md  COMMANDS.md  DETECTION_MODEL.md  DISTRIBUTION.md  EXAMPLES.md  GITHUB_ACTIONS.md  OPENCLAW_CONTEXT.md  ORG_MIGRATION_PLAYBOOK.md  POLICY.md  PRD.md  RELEASE_CHECKLIST.md  RELEASE_ONBOARDING.md  RULES.md  RULE_UPDATES.md  SCAN_OVERVIEW.md  TESTING.md  THREAT_MODEL.md  TRACE_RESEARCH.md
scripts/: build_prompt_injection_benchmark.py  distill_jailbreaks.py  finetune.py  finetune_modal.py  generate_examples_table.py  grow_corpus.py  install.sh  reserve_eval_set.py  run_local_validation.sh  seed_corpus.py  seed_ioc_db.py  seed_vuln_db.py  uninstall.sh  validate_pattern_update.py  write_se_corpus.py
tests/: test_adversarial_suite.py  test_clamav.py  test_cli_more.py  test_compact.py  test_corpus.py  test_diff.py  test_junit.py  test_m12_archive_multilang.py  test_ml_detector.py  test_model_sync.py  test_render.py  test_rules.py  test_sarif.py  test_scan.py  test_showcase_examples.py  test_skill_graph.py  test_suppressions.py
(+132 files in other folders)
