[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "skillscan-security"
version = "0.3.1"
description = "Standalone AI skill security scanner — detects prompt injection, tool poisoning, and supply-chain attacks in MCP skills"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "SkillScan", email = "security@skillscan.sh"}]
requires-python = ">=3.12"
keywords = [
  "security", "mcp", "ai-safety", "prompt-injection", "static-analysis",
  "linter", "claude", "llm", "skill", "agent"
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Security",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Software Development :: Testing",
]

dependencies = [
  "typer>=0.12.3",
  "rich>=13.7.1",
  "pydantic>=2.7.1",
  "pyyaml>=6.0.1",
  "nltk>=3.9.1"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.4.4",
  "mypy>=1.10.0"
]
# Lightweight ONNX backend for --ml-detect (recommended, CPU-only, ~200 MB)
ml-onnx = [
  "transformers>=4.40.0",
  "optimum[onnxruntime]>=1.19.0",
]
# PyTorch backend for --ml-detect (heavier, ~500 MB, GPU-capable)
ml = [
  "transformers>=4.40.0",
  "torch>=2.2.0",
]

[project.scripts]
skillscan-security = "skillscan.cli:app"
skillscan = "skillscan.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
skillscan = ["data/policies/*.yaml", "data/intel/*.json", "data/rules/*.yaml"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff]
line-length = 110
target-version = "py312"
exclude = ["tests/adversarial/cases"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
